--- a/packages/odo-dialog/package.json
+++ b/packages/odo-dialog/package.json
@@ -13,8 +13,8 @@
     }
   ],
   "dependencies": {
-    "@odopod/odo-device": "../odo-device",
-    "@odopod/odo-helpers": "../odo-helpers",
+    "@odopod/odo-device": "^1.0.0",
+    "@odopod/odo-helpers": "^1.0.0",
     "tiny-emitter": "^2.0.1"
   },
   "devDependencies": {},
