--- a/packages/odo-helpers/package.json
+++ b/packages/odo-helpers/package.json
@@ -12,7 +12,7 @@
     }
   ],
   "dependencies": {
-    "@odopod/odo-device": "../odo-device"
+    "@odopod/odo-device": "^1.0.0"
   },
   "devDependencies": {},
   "homepage": "https://github.com/odopod/code-library/tree/master/packages/odo-helpers",
