Try not using a glob pattern for package node_modules.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,32 @@ cache:
   yarn: true
   directories:
     - "node_modules"
-    - "packages/*/node_modules"
+    - "packages/odo-affix/node_modules"
+    - "packages/odo-background-video/node_modules"
+    - "packages/odo-base-component/node_modules"
+    - "packages/odo-carousel/node_modules"
+    - "packages/odo-device/node_modules"
+    - "packages/odo-dialog/node_modules"
+    - "packages/odo-draggable/node_modules"
+    - "packages/odo-dropdown/node_modules"
+    - "packages/odo-dual-viewer/node_modules"
+    - "packages/odo-helpers/node_modules"
+    - "packages/odo-hotspots/node_modules"
+    - "packages/odo-module/node_modules"
+    - "packages/odo-object-fit/node_modules"
+    - "packages/odo-on-swipe/node_modules"
+    - "packages/odo-pointer/node_modules"
+    - "packages/odo-responsive-attributes/node_modules"
+    - "packages/odo-responsive-classes/node_modules"
+    - "packages/odo-responsive-images/node_modules"
+    - "packages/odo-reveal/node_modules"
+    - "packages/odo-sassplate/node_modules"
+    - "packages/odo-scroll-animation/node_modules"
+    - "packages/odo-scroll-feedback/node_modules"
+    - "packages/odo-share/node_modules"
+    - "packages/odo-sticky-headers/node_modules"
+    - "packages/odo-tabs/node_modules"
+    - "packages/odo-tap/node_modules"
+    - "packages/odo-video/node_modules"
+    - "packages/odo-viewport/node_modules"
+    - "packages/odo-window-events/node_modules"
