--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@odopod/eslint-config": "^1.1.0",
-    "ansi-escapes": "^2.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-transform-es2015-classes": "^6.23.0",
@@ -26,17 +25,21 @@
     "chai": "^4.1.0",
     "classlist.js": "github:allannienhuis/classList.js",
     "eslint": "^4.3.0",
+    "execa": "^0.7.0",
     "fs-extra": "^4.0.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.0",
-    "gulp-istanbul-report": "^0.0.1",
-    "gulp-mocha-phantomjs": "^0.12.0",
     "gulp-sequence": "^0.4.6",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-fixture": "^0.2.6",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-rollup-preprocessor": "^4.0.2",
     "minimist": "^1.2.0",
-    "mocha": "^3.2.0",
-    "mocha-phantomjs": "^4.1.0",
-    "mocha-phantomjs-istanbul": "^0.0.2",
+    "mocha": "^3.5.0",
     "nunjucks": "^3.0.0",
     "pify": "^3.0.0",
     "rollup": "^0.45.2",
