--- a/package.json
+++ b/package.json
@@ -16,38 +16,39 @@
   },
   "dependencies": {
     "@odopod/eslint-config": "^1.1.0",
+    "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-transform-es2015-classes": "^6.23.0",
-    "babel-plugin-transform-proto-to-assign": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-plugin-transform-proto-to-assign": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
-    "chai": "^4.1.0",
+    "chai": "^4.1.1",
     "classlist.js": "github:allannienhuis/classList.js",
-    "eslint": "^4.3.0",
-    "execa": "^0.7.0",
-    "fs-extra": "^4.0.0",
+    "eslint": "^4.5.0",
+    "execa": "^0.8.0",
+    "fs-extra": "^4.0.1",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^4.0.0",
     "gulp-sequence": "^0.4.6",
-    "karma": "^1.7.0",
+    "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-fixture": "^0.2.6",
     "karma-html2js-preprocessor": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-rollup-preprocessor": "^4.0.2",
+    "karma-rollup-preprocessor": "^5.0.1",
     "minimist": "^1.2.0",
     "mocha": "^3.5.0",
     "nunjucks": "^3.0.0",
     "pify": "^3.0.0",
-    "rollup": "^0.45.2",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup": "^0.49.2",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1",
     "shufflejs": "^5.0.0",
-    "sinon": "^2.3.8"
+    "sinon": "^3.2.1"
   }
 }
