Ignore demos and markdown files when detecting which packages have changed

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,14 @@
 {
   "lerna": "2.1.2",
   "npmClient": "yarn",
+  "commands": {
+    "publish": {
+      "ignore": [
+        "demos/",
+        "*.md"
+      ]
+    }
+  },
   "packages": [
     "packages/*"
   ],
