Fix incorrect repository name in package.json

--- a/packages/odo-carousel/package.json
+++ b/packages/odo-carousel/package.json
@@ -37,7 +37,7 @@
     "slideshow"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
