--- a/packages/odo-dropdown/package.json
+++ b/packages/odo-dropdown/package.json
@@ -38,7 +38,7 @@
     "menu"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
