--- a/packages/odo-dual-viewer/package.json
+++ b/packages/odo-dual-viewer/package.json
@@ -40,7 +40,7 @@
     "slider"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
