--- a/packages/odo-hotspots/package.json
+++ b/packages/odo-hotspots/package.json
@@ -27,7 +27,7 @@
     "hotspots"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
