--- a/packages/odo-scroll-feedback/package.json
+++ b/packages/odo-scroll-feedback/package.json
@@ -34,7 +34,7 @@
     "scroll jack"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
