--- a/packages/odo-sticky-headers/package.json
+++ b/packages/odo-sticky-headers/package.json
@@ -33,7 +33,7 @@
     "header"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
