--- a/packages/odo-tabs/package.json
+++ b/packages/odo-tabs/package.json
@@ -34,7 +34,7 @@
     "tabs"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
