--- a/packages/odo-background-video/package.json
+++ b/packages/odo-background-video/package.json
@@ -36,7 +36,7 @@
     "background video"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
