--- a/packages/odo-base-component/package.json
+++ b/packages/odo-base-component/package.json
@@ -36,7 +36,7 @@
     "base class"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
