--- a/packages/odo-device/package.json
+++ b/packages/odo-device/package.json
@@ -26,7 +26,7 @@
     "odopod"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
