--- a/packages/odo-draggable/package.json
+++ b/packages/odo-draggable/package.json
@@ -35,7 +35,7 @@
     "draggable"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
