--- a/packages/odo-helpers/package.json
+++ b/packages/odo-helpers/package.json
@@ -29,7 +29,7 @@
     "odopod"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
