--- a/packages/odo-object-fit/package.json
+++ b/packages/odo-object-fit/package.json
@@ -30,7 +30,7 @@
     "contain"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
