--- a/packages/odo-on-swipe/package.json
+++ b/packages/odo-on-swipe/package.json
@@ -31,7 +31,7 @@
     "swipe"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
