--- a/packages/odo-tap/package.json
+++ b/packages/odo-tap/package.json
@@ -33,7 +33,7 @@
     "click"
   ],
   "license": "MIT",
-  "repository": "odopod/odo",
+  "repository": "odopod/code-library",
   "scripts": {
     "test": "gulp code-quality test"
   }
