--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "babel-plugin-istanbul": "^4.0.0",
     "babel-plugin-transform-es2015-classes": "^6.23.0",
     "babel-plugin-transform-proto-to-assign": "^6.26.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "chai": "^4.1.1",
     "eslint": "^4.5.0",
-    "execa": "^0.8.0",
+    "execa": "^0.9.0",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.1",
     "gulp": "^4.0.0",
@@ -41,7 +41,7 @@
     "mocha": "^4.0.1",
     "nunjucks": "^3.0.0",
     "pify": "^3.0.0",
-    "rollup": "~0.53.3",
+    "rollup": "~0.54.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-node-resolve": "^3.0.0",
