--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "classlist.js": "github:allannienhuis/classList.js",
+    "element-closest": "^2.0.2",
     "shufflejs": "^5.0.0"
   },
   "devDependencies": {
@@ -23,7 +24,6 @@
     "babel-plugin-transform-proto-to-assign": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.1",
-    "element-closest": "^2.0.2",
     "eslint": "^4.5.0",
     "execa": "^0.9.0",
     "fs-extra": "^5.0.0",
@@ -39,14 +39,14 @@
     "karma-rollup-preprocessor": "^5.0.1",
     "lerna": "^2.1.2",
     "minimist": "^1.2.0",
-    "mocha": "^4.0.1",
+    "mocha": "^5.0.0",
     "nunjucks": "^3.0.0",
     "pify": "^3.0.0",
-    "rollup": "~0.54.0",
+    "rollup": "^0.55.4",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
+    "rollup-plugin-uglify": "^3.0.0",
     "sinon": "^4.0.1"
   }
 }
