--- a/packages/odo-affix/package.json
+++ b/packages/odo-affix/package.json
@@ -3,6 +3,7 @@
   "description": "Makes an element fixed position while its within a container.",
   "version": "1.0.3",
   "main": "dist/odo-affix.js",
+  "module": "dist/odo-affix.esm.js",
   "odoModule": "src/affix.js",
   "author": "Odopod",
   "contributors": [
@@ -19,8 +20,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "ui"
