--- a/packages/odo-background-video/package.json
+++ b/packages/odo-background-video/package.json
@@ -3,6 +3,7 @@
   "description": "Plays in the background when the element comes into view and falls back to an image if the browser cannot autoplay video.",
   "version": "1.0.3",
   "main": "dist/odo-background-video.js",
+  "module": "dist/odo-background-video.esm.js",
   "style": "css/odo-background-video.css",
   "odoModule": "src/background-video.js",
   "author": "Odopod",
@@ -23,8 +24,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "ui"
