--- a/packages/odo-device/package.json
+++ b/packages/odo-device/package.json
@@ -3,6 +3,7 @@
   "description": "Device-specific settings for JS and CSS",
   "version": "1.0.3",
   "main": "dist/odo-device.js",
+  "module": "dist/odo-device.esm.js",
   "odoModule": "src/device.js",
   "author": "Odopod",
   "contributors": [
@@ -15,8 +16,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "utilities"
