--- a/packages/odo-hotspots/package.json
+++ b/packages/odo-hotspots/package.json
@@ -3,6 +3,7 @@
   "description": "A component which positions and opens hotspots.",
   "version": "1.1.3",
   "main": "dist/odo-hotspots.js",
+  "module": "dist/odo-hotspots.esm.js",
   "style": "css/odo-hotspots.css",
   "odoModule": "src/hotspots.js",
   "author": "Odopod",
