--- a/packages/odo-module/package.json
+++ b/packages/odo-module/package.json
@@ -3,6 +3,7 @@
   "description": "Augment a class' static methods with helpers",
   "version": "1.1.0",
   "main": "dist/odo-module.js",
+  "module": "dist/odo-module.esm.js",
   "odoModule": "src/module.js",
   "author": "Odopod",
   "contributors": [
@@ -15,8 +16,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "utilities"
