--- a/packages/odo-responsive-classes/package.json
+++ b/packages/odo-responsive-classes/package.json
@@ -3,6 +3,7 @@
   "description": "Swap class names of elements using responsive attributes.",
   "version": "1.0.3",
   "main": "dist/odo-responsive-classes.js",
+  "module": "dist/odo-responsive-classes.esm.js",
   "odoModule": "src/responsive-classes.js",
   "author": "Odopod",
   "contributors": [
@@ -19,8 +20,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "utilities"
