--- a/packages/odo-scroll-animation/package.json
+++ b/packages/odo-scroll-animation/package.json
@@ -3,6 +3,7 @@
   "description": "Performant scroll listeners.",
   "version": "1.0.2",
   "main": "dist/odo-scroll-animation.js",
+  "module": "dist/odo-scroll-animation.esm.js",
   "odoModule": "src/scroll-animation.js",
   "author": "Odopod",
   "contributors": [
@@ -15,8 +16,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "events"
