--- a/packages/odo-scroll-feedback/package.json
+++ b/packages/odo-scroll-feedback/package.json
@@ -3,6 +3,7 @@
   "description": "Based user input from mouse, keyboard, and touch, the `ScrollFeedback` instance will emit navigation events.",
   "version": "1.0.3",
   "main": "dist/odo-scroll-feedback.js",
+  "module": "dist/odo-scroll-feedback.esm.js",
   "odoModule": "src/scroll-feedback.js",
   "author": "Odopod",
   "contributors": [
@@ -19,8 +20,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "events"
