--- a/packages/odo-tabs/package.json
+++ b/packages/odo-tabs/package.json
@@ -3,6 +3,7 @@
   "description": "A component for switching between panes of content.",
   "version": "1.0.3",
   "main": "dist/odo-tabs.js",
+  "module": "dist/odo-tabs.esm.js",
   "style": "css/odo-tabs.css",
   "odoModule": "src/tabs.js",
   "author": "Odopod",
@@ -21,8 +22,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "ui"
