--- a/packages/odo-video/package.json
+++ b/packages/odo-video/package.json
@@ -3,6 +3,7 @@
   "description": "A lightweight html5 video wrapper.",
   "version": "1.1.1",
   "main": "dist/odo-video.js",
+  "module": "dist/odo-video.esm.js",
   "odoModule": "src/video.js",
   "author": "Odopod",
   "contributors": [
@@ -18,8 +19,7 @@
   "files": [
     "css",
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "ui"
