--- a/packages/odo-base-component/package.json
+++ b/packages/odo-base-component/package.json
@@ -5,6 +5,7 @@
   "main": "dist/odo-base-component.js",
   "module": "dist/odo-base-component.esm.js",
   "odoModule": "src/base-component.js",
+  "sideEffects": false,
   "author": "Odopod",
   "contributors": [
     {
