--- a/packages/odo-pointer/package.json
+++ b/packages/odo-pointer/package.json
@@ -5,6 +5,7 @@
   "main": "dist/odo-pointer.js",
   "module": "dist/odo-pointer.esm.js",
   "odoModule": "src/pointer.js",
+  "sideEffects": false,
   "author": "Odopod",
   "contributors": [
     {
