First half of PR feedback

--- a/packages/odo-expandable/package.json
+++ b/packages/odo-expandable/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@odopod/odo-expandable",
   "description": "A simple, accessible combination of two elements; A trigger to handle clicks, and a target to toggle visibility.",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "main": "dist/odo-expandable.js",
   "odoModule": "src/expandable.js",
   "author": "Odopod",
@@ -14,8 +14,7 @@
   "homepage": "https://github.com/odopod/code-library/tree/master/packages/odo-expandable",
   "files": [
     "dist",
-    "src",
-    "index.js"
+    "src"
   ],
   "odoKeywords": [
     "ui"
