--- a/packages/odo-expandable/package.json
+++ b/packages/odo-expandable/package.json
@@ -13,6 +13,10 @@
       "email": "matt.zaso@odopod.com"
     }
   ],
+  "dependencies": {
+    "@odopod/odo-helpers": "^1.0.3",
+    "@odopod/odo-window-events": "^1.1.0"
+  },
   "homepage": "https://github.com/odopod/code-library/tree/master/packages/odo-expandable",
   "files": [
     "dist",
