--- a/packages/odo-expandable/package.json
+++ b/packages/odo-expandable/package.json
@@ -3,6 +3,7 @@
   "description": "A simple, accessible combination of two elements; A trigger to handle clicks, and a target to toggle visibility.",
   "version": "0.1.0",
   "main": "dist/odo-expandable.js",
+  "style": "css/odo-carousel.css",
   "module": "dist/odo-expandable.esm.js",
   "odoModule": "src/expandable.js",
   "sideEffects": false,
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/odopod/code-library/tree/master/packages/odo-expandable",
   "files": [
+    "css",
     "dist",
     "src"
   ],
