--- a/packages/odo-expandable/package.json
+++ b/packages/odo-expandable/package.json
@@ -3,7 +3,7 @@
   "description": "A simple, accessible combination of two elements; A trigger to handle clicks, and a target to toggle visibility.",
   "version": "0.1.0",
   "main": "dist/odo-expandable.js",
-  "style": "css/odo-carousel.css",
+  "style": "css/odo-expandable.css",
   "module": "dist/odo-expandable.esm.js",
   "odoModule": "src/expandable.js",
   "sideEffects": false,
