--- a/packages/odo-carousel/package.json
+++ b/packages/odo-carousel/package.json
@@ -6,6 +6,7 @@
   "module": "dist/odo-carousel.esm.js",
   "style": "css/odo-carousel.css",
   "odoModule": "src/carousel.js",
+  "types": "index.d.ts",
   "sideEffects": false,
   "author": "Odopod",
   "contributors": [
