--- a/packages/odo-device/package.json
+++ b/packages/odo-device/package.json
@@ -5,6 +5,7 @@
   "main": "dist/odo-device.js",
   "module": "dist/odo-device.esm.js",
   "odoModule": "src/device.js",
+  "types": "index.d.ts",
   "sideEffects": false,
   "author": "Odopod",
   "contributors": [
