--- a/packages/odo-window-events/package.json
+++ b/packages/odo-window-events/package.json
@@ -5,6 +5,7 @@
   "main": "dist/odo-window-events.js",
   "module": "dist/odo-window-events.esm.js",
   "odoModule": "src/window-events.js",
+  "types": "index.d.ts",
   "sideEffects": false,
   "author": "Odopod",
   "contributors": [
@@ -25,7 +26,8 @@
   "files": [
     "css",
     "dist",
-    "src"
+    "src",
+    "index.d.ts"
   ],
   "odoKeywords": [
     "events"
