--- a/packages/odo-dropdown/package.json
+++ b/packages/odo-dropdown/package.json
@@ -6,6 +6,7 @@
   "module": "dist/odo-dropdown.esm.js",
   "style": "css/odo-dropdown.css",
   "odoModule": "src/dropdown.js",
+  "types": "index.d.ts",
   "sideEffects": false,
   "author": "Odopod",
   "contributors": [
@@ -26,7 +27,8 @@
   "files": [
     "css",
     "dist",
-    "src"
+    "src",
+    "index.d.ts"
   ],
   "odoKeywords": [
     "ui"
